# projeto-cpd

./: .gitignore  problema.txt
Projecto/: init_particles.c
Projecto/p_serial/: CMakeLists.txt  Celula.cpp  Celula.h  Makefile  Matriz.cpp  Matriz.h  Particula.cpp  Particula.h  Posicao.cpp  Posicao.h  init_particles.c  init_particles.cpp  init_particles.h  main.cpp  parsim
lab1/: Makefile  main
